Add position and previous command.